@@ -299,15 +299,15 @@ CMD_FTPD = /usr/local/etc/rc.d/proftpd
 
 CMD_HTTPD = /usr/local/sbin/apachectl
 
-CMD_IMAP = /usr/local/etc/rc.d/courier-imap-imapd.sh
+CMD_IMAP = /usr/local/etc/rc.d/courier-imap-imapd
 
 CMD_IMAP_SSL = no
 
 CMD_MTA = /usr/local/etc/rc.d/postfix
 
-CMD_NAMED = /usr/local/etc/named.rc
+CMD_NAMED = /usr/sbin/rndc
 
-CMD_POP = /usr/local/etc/rc.d/courier-imap-pop3d.sh
+CMD_POP = /usr/local/etc/rc.d/courier-imap-pop3d
 
 CMD_POP_SSL = no
 
