@@ -45,7 +45,7 @@ TimeoutStalled             600
 TimeoutIdle                1200
 
 DisplayLogin               welcome.msg
-DisplayFirstChdir          message
+DisplayChdir               message
 
 ListOptions                "-l"
 #LsDefaultOptions           "-l"
@@ -160,8 +160,7 @@ Group                      nogroup
 </IfModule>
 
 # ispCP SQL Managment
-# Activate for proftpd >= 1.3
-#SQLBackend                 mysql
+SQLBackend                 mysql
 SQLAuthTypes               Crypt
 SQLAuthenticate            on
 SQLConnectInfo             {DATABASE_NAME}@{DATABASE_HOST} {DATABASE_USER} {DATABASE_PASS}
