@@ -79,6 +79,7 @@ perl-Unix-Syslog
 perl-libwww-perl
 php5
 php5-fastcgi
+php5-ftp
 php5-mbstring
 php5-mcrypt
 php5-mysql
